--- a/vendas.html
+++ b/vendas.html
@@ -7,8 +7,8 @@
     <title>VENDAS</title>
 </head>
 <body>
-    <h1>PAGINA DE VENDAS</h1>
-        <a href="index.html">Ir para a pagina home</a>
+    <h1>VENDAS</h1>
+        <a href="index.html">Voltar a pagina home</a>
 
 
 </body>
